<resources>
    <string name="app_name">Android Basics Homework</string>
    <string name="first_number_hint">Type the first number..</string>
    <string name="second_number_hint">Type the second number..</string>
    <string name="float_values">Use float numbers</string>
    <string name="signed_values">Use signed numbers</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="operation_not_found">Please, choose an operation</string>
    <string name="value_cannot_be_empty">You should specify both numbers</string>
</resources>
