<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_of_element"
        android:orientation="vertical">

    <EditText
            android:id="@+id/field1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/margin_of_element"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/first_number_hint"/>

    <EditText
            android:id="@+id/field2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/margin_of_element"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/second_number_hint"/>

    <RadioGroup
            android:id="@+id/radioOperationGroup_1_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <RadioButton
                android:id="@+id/operation1"
                android:text="@string/plus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/operation2"
                android:text="@string/minus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
    </RadioGroup>

    <RadioGroup
            android:id="@+id/radioOperationGroup_3_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <RadioButton
                android:id="@+id/operation3"
                android:text="@string/divide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/operation4"
                android:text="@string/multiply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
    </RadioGroup>

    <CheckBox
            android:id="@+id/floatValues"
            android:text="@string/float_values"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:padding="@dimen/margin_of_element"/>

    <CheckBox
            android:id="@+id/signedValues"
            android:text="@string/signed_values"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:padding="@dimen/margin_of_element"/>

    <TextView
            android:id="@+id/resultField"
            android:text="@string/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/margin_of_element"/>

    <Button
            android:id="@+id/calculateButton"
            android:text="@string/calculate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/margin_of_element"/>

</LinearLayout>